fix: spacing for A4 sheets

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,11 +106,11 @@ body.scale-cv{
 }
 
 .scale-cv .section{
-  padding: 1.5rem 0 .80rem;
+  padding: 1.1rem 0 .80rem;
 }
 
 .scale-cv .section-title{
-  margin-bottom: .75rem;
+  margin-bottom: .65rem;
 }
 
 .scale-cv .resume__left,
@@ -625,6 +625,10 @@ img{
   .languages__content{
     grid-template-columns: repeat(3, max-content);
     column-gap: 3.5rem;
+  }
+
+  .languages__name{
+    margin-bottom: initial;
   }
 
   .interests__container{
